# k8s-cluster

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  index.html  index.yaml  monitoring-0.1.0.tgz  network-test-0.1.0.tgz  pyproject.toml
.github/workflows/: auto-tag.yaml  docker-publish.yaml  helm-release.yaml  manual-helm-release.yaml  version-check.yaml
ansible/microk8s/: README.md  inventory.yml  site.yml
ansible/microk8s/group_vars/: all.yml
ansible/microk8s/templates/: wg0.conf.j2
charts/monitoring/: Chart.yaml  values.yaml
charts/monitoring/dashboards/: k8s-summary.json
charts/monitoring/templates/: grafana-dashboards.cm.yaml  prometheus.cm.yaml  prometheus.sa.yaml  prometheus.svc.yaml
charts/network-test/: Chart.yaml  values.yaml
charts/network-test/templates/: _helpers.tpl  cm.pp.yaml  cm.yaml  server.deploy.yaml  server.pp.yaml  server.service.yaml  serviceaccount.pp.yaml  serviceaccount.yaml  tests.deploy.yaml  tests.pp.yaml
clusters/k3s/ansible/: README.md  inventory-sample.yml
clusters/karmada/ansible/: inventory-sample.yml
clusters/karmada/charts/: deployment.pp.yaml
clusters/karmada/terraform/: main.tf  variables.tf
clusters/microk8s/ansible/: .ansible-lint  ansible.cfg  local.yml  site.yml  wireguard.yml
clusters/microk8s/terraform/: main.tf  variables.tf
docker/: Dockerfile
infra/k3s/ansible/: ansible.cfg
infra/microk8s/ansible/: inventory.yml  site.yml
scripts/: entrypoint.sh
src/k8s/: health.py
terraform/: locals.tf  main.tf  terraform.tfvars.example  variables.tf
(+69 files in other folders)
